# polymorph

./: CMakeLists.txt  README.org  conanfile.py
polymorph/: assign.hpp  detail.hpp  enumerate.hpp  filter.hpp  filtering.hpp  fold.hpp  fuse.hpp  pipe.hpp  piping.hpp  polymorph.hpp  stream.hpp  streaming.hpp  take.hpp  tee.hpp  transform.hpp  types.hpp  utils.hpp
test/: CMakeLists.txt  test.cpp
test/conan_package/: CMakeLists.txt  conanfile.txt  test.cpp
test/examples/: CMakeLists.txt  readme.cpp
test/usage/: CMakeLists.txt  test.cpp
